--- a/apps/next/.env.local
+++ b/apps/next/.env.local
@@ -1,2 +1,5 @@
-NEXT_PUBLIC_API_URL=http://localhost:3333
-NEXT_PUBLIC_API_BASE=http://localhost:3333
+[main 863c23c] feat: add automated startup scripts and quick start guide
+ 3 files changed, 348 insertions(+)
+ create mode 100644 QUICK_START.md
+ create mode 100755 start-dev.sh
+ create mode 100755 stop-dev.sh
