feat: add shadcn/ui components for billing pages
Added missing UI components:
- button, input, table, dialog, select
- label, textarea, badge, tabs
- toast, toaster, use-toast hook

Updated tsconfig.json:
- Added baseUrl and paths for @ alias
- Enables @/* imports to resolve to ./src/*

Created components.json for shadcn/ui configuration

This fixes all the 'Module not found' errors in billing pages.

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -12,23 +12,33 @@
     "test:e2e:ci": "node ./tests/ci-run.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@olive/types": "workspace:*",
     "@olive/ui": "workspace:*",
-    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.33",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@olive/config": "workspace:*",
+    "@playwright/test": "^1.48.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@playwright/test": "^1.48.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.33",
     "postcss": "^8",
