--- a/apps/next/tsconfig.json
+++ b/apps/next/tsconfig.json
@@ -5,7 +5,11 @@
     "jsx": "preserve",
     "types": [],
     "incremental": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
